--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,16 @@
 
 buildscript {
     ext.kotlin_version = '1.3.41'
+    ext.anko_version = '0.10.7'
+    ext.koin_version = '2.0.1'
+    ext.gradle_version = '3.4.1'
+    ext.retrofit_version = '2.4.0'
+    ext.dagger2_version = '2.16'
+    ext.room_version = "1.1.1"
+    ext.rxjava = '2.2.2'
+    ext.rxandroid= '2.1.0'
+    ext.rxkotlin='2.2.0'
+    ext.glide_version='4.8.0'
     repositories {
         google()
         jcenter()
