--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,10 +73,6 @@ dependencies {
     implementation 'com.trello.rxlifecycle2:rxlifecycle:2.2.2'
     implementation 'com.trello.rxlifecycle2:rxlifecycle-components:2.2.2'
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.9.5@aar') {
-        transitive = true
-    }
-
     // Material Dialog
     implementation 'com.afollestad.material-dialogs:core:2.0.0-beta5'
 
@@ -85,10 +81,8 @@ dependencies {
     implementation "org.jetbrains.anko:anko-design:$anko_version"
 
     //Data Binding
-    kapt "androidx.databinding:databinding-compiler:$gradle_version"
-
-
-
+    kapt "androidx.databinding:databinding-compiler:$gradle_plugin_version"
+    
     //Test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -97,7 +91,7 @@ dependencies {
     testImplementation 'org.robolectric:robolectric:3.8'
     testImplementation 'com.nhaarman:mockito-kotlin:1.5.0'
 
-//Koin
+    //Koin
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-core:$koin_version"
     implementation "org.koin:koin-core-ext:$koin_version"
