--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.kotlin_version = '1.3.41'
     ext.anko_version = '0.10.7'
     ext.koin_version = '2.0.1'
-    ext.gradle_version = '3.4.1'
+    ext.gradle_plugin_version = '3.5.0'
     ext.retrofit_version = '2.4.0'
     ext.dagger2_version = '2.16'
     ext.room_version = "1.1.1"
@@ -18,7 +18,7 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath "com.android.tools.build:gradle:$gradle_plugin_version" 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
